<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    android:paddingLeft="10dip"
    android:paddingRight="10dip" >
			<ListView
	            android:id="@+id/to_install_items_list"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="10dip">
	        </ListView>
	        <LinearLayout android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_alignParentBottom="true">
				        <TextView
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:text="@string/other_options"
				            android:textAppearance="@android:style/TextAppearance.Medium" />
					     <CheckBox
					        android:id="@+id/doWipe"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:textSize="12sp"
				            android:text="@string/do_wipe" />
					     <CheckBox
					        android:id="@+id/doBackup"
				            android:layout_width="wrap_content"
				            android:layout_height="wrap_content"
				            android:textSize="12sp"
				            android:text="@string/do_backup" />
	
					     <EditText
					         android:id="@+id/backupName"
					         android:layout_width="match_parent"
					         android:layout_height="wrap_content"
					         android:enabled="false"
					         android:textSize="12sp"
					         android:hint="@string/backup_name" >
					     </EditText>
				</LinearLayout>
</RelativeLayout>